dependecy qdded